# scrivener-obsidian-converter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
Projects/Obsidan Created Con/.obsidian/: workspace.json
app/: __init__.py  converter.py  main.py
app/static/: app.js  index.html  style.css
